imports - parsnip, mgcv

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(enquos)
 export(expr)
 export(sym)
 export(syms)
+import(mgcv)
+import(parsnip)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
