--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,15 +11,16 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: 
+Depends:
+    R (>= 3.5.0),
     parsnip,
-    mgcv,
+    mgcv
+Imports: 
     rlang (>= 0.1.2),
     magrittr
 Suggests: 
     tidymodels,
     modeltime,
-    brms,
     knitr,
     rmarkdown,
     roxygen2,
